--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <a href="#" class="a-navbar">HOME</a>
             </li>
             <li class="li-navbar">
-                <a href="ABOUT.HTML" class="a-navbar">ABOUT ME</a>
+                <a href="about.html" class="a-navbar">ABOUT ME</a>
             </li>
             <li class="li-navbar">
-                <a href="CONTACT.HTML" class="a-navbar">CONTACT ME</a>
+                <a href="contact.html" class="a-navbar">CONTACT ME</a>
             </li>
         </ul>
     </div>
