--- a/about.html
+++ b/about.html
@@ -8,13 +8,13 @@
         <div class="container-navbar">
             <ul class="ul-navbar">
                 <li class="li-navbar">
-                    <a href="INDEX.html" class="a-navbar">HOME</a>
+                    <a href="index.html" class="a-navbar">HOME</a>
                 </li>
                 <li class="li-navbar">
-                    <a href="ABOUT.HTML" class="a-navbar">ABOUT ME</a>
+                    <a href="about.html" class="a-navbar">ABOUT ME</a>
                 </li>
                 <li class="li-navbar">
-                    <a href="CONTACT.HTML" class="a-navbar">CONTACT ME</a>
+                    <a href="contact.html" class="a-navbar">CONTACT ME</a>
                 </li>
             </ul>
         </div>
